# Document-Processing-Service

./: .dockerignore  .env.local  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  FOR-AI-CODING-AGENTS.md  OWNERS-MANUAL.md  README.md  docker-build.ps1  docker-compose.yml  pyproject.toml  requirements.txt  start.ps1
.github/workflows/: docker-publish-ghcr.yml  publish-ghcr.yml
app/: config.py  main.py
app/adapters/document_processor/: __init__.py  docling_document_processor.py
app/api/routes/: documents.py
app/core/domain/value_objects/: document_type.py
docs/: AI-AGENT-GUIDE.md  COMPOUNDING-SETUP-COMPLETE.md  OWNERS-MANUAL.md  README.md
docs/data-quirks/: 001-windows-huggingface-symlinks.md  002-git-commit-co-author.md  003-git-commit-message-format.md
docs/decisions/: 000-template.md  001-docling-for-document-processing.md
docs/integrations/: docling.md
docs/windows/: initialtesting.md
service_scripts/: create_venv.py  install_with_venv.py  restart_with_venv.py  shutdown_with_venv.py  start_with_venv.py  venv_utils.py  windows_system_test.ps1
